# prex

./: CMakeLists.txt  Cargo.toml  README.md
core/: core.h  socket.h
prex/: main.c
prex/src/: client.rs  main.rs
prex_client/: Cargo.toml
prex_client/src/: main.rs
prex_core/: Cargo.toml
prex_core/src/: lib.rs
prex_daemon/: Cargo.toml
prex_daemon/src/: main.rs
prexd/: Cargo.toml  exec.c  exec.h  main.c
prexd/src/: daemon.rs  main.rs
